1.6.2
=====
	* added support for Mac OS X Darwin

1.6.1
=====
        * maintenance release: 
                - define LPCTSTR and LPTSTR for recent releases of pcsc-lite
                - print formatting of userdata in SCardHelper_PrintReaderStateList
                - updated home page and download links to point to sourceforge.net


1.6.0
=====

        * released open-source with LGPL license
