@@ -10,4 +10,4 @@
 
 - support of Mac OS X
 
-May 2007
+June 2007
