@@ -1,10 +1,12 @@
 1.6.2
 =====
-	* added support for Mac OS X Darwin
+        * started support for Mac OS X Darwin; not yet operational
+        * fixed issue with "'NoneType' object is not callable" exception on some
+        clean-up routines executed from __del__ methods (CardMonitoring, ReaderMonitoring, CardConnection)
 
 1.6.1
 =====
-        * maintenance release: 
+        * maintenance release:
                 - define LPCTSTR and LPTSTR for recent releases of pcsc-lite
                 - print formatting of userdata in SCardHelper_PrintReaderStateList
                 - updated home page and download links to point to sourceforge.net
